After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720065 - ATK does not have good roles for HTML description lists
ATK does not have good roles for HTML description lists
Status: RESOLVED FIXED
Product: atk
Classification: Platform
Component: atk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: ATK maintainer(s)
ATK maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-12-08 16:49 UTC by Mario Sánchez Prada
Modified: 2013-12-09 17:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add roles for description lists (1.88 KB, patch)
2013-12-09 15:11 UTC, Alejandro Piñeiro Iglesias (IRC: infapi00)
committed Details | Review

Description Mario Sánchez Prada 2013-12-08 16:49:51 UTC
HTML DL elements and friends (DT, DD) do not have a proper way to be exposed through ATK, since just using LIST for DL and merging the DT + DD in a single LIST_ITEM element would lose part of the meaning (boundaries between the term and its definition).

As a result, it might be interesting to have specific roles to better expose a hierarchy like this:

<dl>
  <dt>Coffee</dt>
    <dd>Black hot drink</dd>
  <dt>Milk</dt>
    <dd>White cold drink</dd>
</dl>

What about something like this:
 ATK_ROLE_DESCRIPTION_LIST
 ATK_ROLE_DESCRIPTION_TERM
 ATK_ROLE_DESCRIPTION_VALUE

[1] http://www.whatwg.org/specs/web-apps/current-work/multipage/grouping-content.html#the-dl-element
Comment 1 Alejandro Piñeiro Iglesias (IRC: infapi00) 2013-12-09 15:11:50 UTC
Created attachment 263817 [details] [review]
Add roles for description lists

Adding the roles are easy. As usual the complex is the documentation. I wrote one based on dl/dd/dt documentation at 
http://www.whatwg.org/specs/web-apps/current-work/multipage/grouping-content.html#the-dl-element

but not sure if too verbose or properly worded. Review is welcome.
Comment 2 Alejandro Piñeiro Iglesias (IRC: infapi00) 2013-12-09 17:11:38 UTC
Comment on attachment 263817 [details] [review]
Add roles for description lists

After some minor tweaks on the text (reviewd by Joanmarie Diggs), patch committed.