roles: add roles for description lists

https://bugzilla.gnome.org/show_bug.cgi?id=720065